rewine-backend/templates/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: summit2021
      app.openshift.io/vcs-uri: https://github.com/Red-Wine-Software/backend
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: rewine
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: openjdk-11-el7
    name: backend
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: backend
      deploymentconfig: backend
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
